--- a/src/QueryableValues.EF6.SqlServer/QueryableValues.EF6.SqlServer.csproj
+++ b/src/QueryableValues.EF6.SqlServer/QueryableValues.EF6.SqlServer.csproj
@@ -1,50 +1,35 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-	<Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
 	<PropertyGroup>
-		<Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-		<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-		<ProjectGuid>{85CD987F-336B-4CB3-A9F7-D4EB8A7894D4}</ProjectGuid>
-		<OutputType>Library</OutputType>
-		<AppDesignerFolder>Properties</AppDesignerFolder>
+		<TargetFrameworks>net452;netstandard2.1</TargetFrameworks>
 		<RootNamespace>BlazarTech.QueryableValues</RootNamespace>
 		<AssemblyName>BlazarTech.QueryableValues.EF6.SqlServer</AssemblyName>
-		<TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
-		<FileAlignment>512</FileAlignment>
-		<Deterministic>true</Deterministic>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<RepositoryUrl>https://github.com/yv989c/BlazarTech.QueryableValues.EF6</RepositoryUrl>
+		<Authors>Carlos Villegas</Authors>
+		<Product>BlazarTech.QueryableValues</Product>
+		<PackageId>BlazarTech.QueryableValues.EF6.SqlServer</PackageId>
+		<Description>Allows you to efficiently compose an IEnumerable&lt;T&gt; in your Entity Framework 6 queries when using the SQL Server Database Provider. This is accomplished by using the AsQueryableValues extension method available on the DbContext class. Everything is evaluated on the server with a single round trip, in a way that preserves the query's execution plan, even when the values behind the IEnumerable&lt;T&gt; are changed on subsequent executions.</Description>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageProjectUrl>https://github.com/yv989c/BlazarTech.QueryableValues</PackageProjectUrl>
+		<PackageTags>Entity Framework 6 entity-framework EF Data O/RM EntityFramework6 EF6 SQL Server IQueryable IEnumerable Queryable Values MemoryJoin BulkInsertTempTableAsync WhereBulkContains Extension Extensions Memory Join Contains Performance LINQ</PackageTags>
+		<PackageIcon>icon.png</PackageIcon>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
 	</PropertyGroup>
-	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-		<DebugSymbols>true</DebugSymbols>
-		<DebugType>full</DebugType>
-		<Optimize>false</Optimize>
-		<OutputPath>bin\Debug\</OutputPath>
-		<DefineConstants>DEBUG;TRACE</DefineConstants>
-		<ErrorReport>prompt</ErrorReport>
-		<WarningLevel>4</WarningLevel>
+
+	<PropertyGroup Condition="'$(TargetFramework)'=='netstandard2.1'">
+		<Nullable>enable</Nullable>
 	</PropertyGroup>
-	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-		<DebugType>pdbonly</DebugType>
-		<Optimize>true</Optimize>
-		<OutputPath>bin\Release\</OutputPath>
-		<DefineConstants>TRACE</DefineConstants>
-		<ErrorReport>prompt</ErrorReport>
-		<WarningLevel>4</WarningLevel>
-	</PropertyGroup>
-	<ItemGroup>
-		<Compile Include="QueryableValuesCommandInterceptor.cs" />
-		<Compile Include="QueryableValuesDbContextExtensions.cs" />
-		<Compile Include="Properties\AssemblyInfo.cs" />
-	</ItemGroup>
-	<ItemGroup>
-		<Reference Include="System" />
-		<Reference Include="System.ComponentModel.DataAnnotations" />
-		<Reference Include="System.Data" />
+
+	<ItemGroup Condition="'$(TargetFramework)'=='net452'">
+		<PackageReference Include="EntityFramework" Version="6.0.0" />
 		<Reference Include="System.Runtime.Caching" />
 	</ItemGroup>
-	<ItemGroup>
-		<PackageReference Include="EntityFramework">
-			<Version>6.0.0</Version>
-		</PackageReference>
+
+	<ItemGroup Condition="'$(TargetFramework)'=='netstandard2.1'">
+		<PackageReference Include="EntityFramework" Version="6.3.0" />
+		<PackageReference Include="System.Runtime.Caching" Version="6.0.0" />
 	</ItemGroup>
-	<Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+
 </Project>
