--- a/src/QueryableValues.EF6.SqlServer/QueryableValues.EF6.SqlServer.csproj
+++ b/src/QueryableValues.EF6.SqlServer/QueryableValues.EF6.SqlServer.csproj
@@ -32,7 +32,7 @@
 			<Pack>True</Pack>
 			<PackagePath>\</PackagePath>
 		</None>
-		<None Include="..\..\LICENSE" Visible="false">
+		<None Include="..\..\LICENSE.md" Visible="false">
 			<Pack>True</Pack>
 			<PackagePath>\</PackagePath>
 		</None>
