--- a/src/QueryableValues.EF6.SqlServer/QueryableValues.EF6.SqlServer.csproj
+++ b/src/QueryableValues.EF6.SqlServer/QueryableValues.EF6.SqlServer.csproj
@@ -2,7 +2,7 @@
 	<Import Project="../../Version.xml" />
 	
 	<PropertyGroup>
-		<TargetFrameworks>net452;netstandard2.1</TargetFrameworks>
+		<TargetFrameworks>net452;net472;netstandard2.1;net6.0</TargetFrameworks>
 		<RootNamespace>BlazarTech.QueryableValues</RootNamespace>
 		<AssemblyName>BlazarTech.QueryableValues.EF6.SqlServer</AssemblyName>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
@@ -17,10 +17,14 @@
 		<PackageIcon>icon.png</PackageIcon>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(TargetFramework)'=='net452' or '$(TargetFramework)'=='net472'">
+		<LangVersion>8</LangVersion>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(TargetFramework)'=='netstandard2.1'">
-		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -38,13 +42,19 @@
 		</None>
 	</ItemGroup>
 
-	<ItemGroup Condition="'$(TargetFramework)'=='net452'">
+	<ItemGroup Condition="'$(TargetFramework)'=='net452' or '$(TargetFramework)'=='net472'">
 		<PackageReference Include="EntityFramework" Version="6.0.0" />
+		<PackageReference Include="System.Buffers" Version="4.5.1" />
 		<Reference Include="System.Runtime.Caching" />
 	</ItemGroup>
 
-	<ItemGroup Condition="'$(TargetFramework)'=='netstandard2.1'">
+	<ItemGroup Condition="'$(TargetFramework)'=='net472'">
+		<PackageReference Include="Microsoft.Extensions.ObjectPool" Version="6.0.8" />
+	</ItemGroup>
+	
+	<ItemGroup Condition="'$(TargetFramework)'=='netstandard2.1' or '$(TargetFramework)'=='net6.0'">
 		<PackageReference Include="EntityFramework" Version="6.3.0" />
 		<PackageReference Include="System.Runtime.Caching" Version="6.0.0" />
+		<PackageReference Include="Microsoft.Extensions.ObjectPool" Version="6.0.8" />
 	</ItemGroup>
 </Project>
