--- a/tests/QueryableValues.EF6.SqlServer.Tests.EF60/QueryableValues.EF6.SqlServer.Tests.EF60.csproj
+++ b/tests/QueryableValues.EF6.SqlServer.Tests.EF60/QueryableValues.EF6.SqlServer.Tests.EF60.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BlazarTech.QueryableValues.EF6.SqlServer.Tests</RootNamespace>
-    <AssemblyName>BlazarTech.QueryableValues.EF6.SqlServer.Tests.DotNetFramework</AssemblyName>
+    <AssemblyName>BlazarTech.QueryableValues.EF6.SqlServer.Tests.EF60</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
