--- a/tests/QueryableValues.EF6.SqlServer.Tests.EF61/QueryableValues.EF6.SqlServer.Tests.EF61.csproj
+++ b/tests/QueryableValues.EF6.SqlServer.Tests.EF61/QueryableValues.EF6.SqlServer.Tests.EF61.csproj
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\SharedTestProjectProperties.xml" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -9,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BlazarTech.QueryableValues.EF6.SqlServer.Tests</RootNamespace>
-    <AssemblyName>BlazarTech.QueryableValues.EF6.SqlServer.Tests.DotNetFramework.EF61</AssemblyName>
+    <AssemblyName>BlazarTech.QueryableValues.EF6.SqlServer.Tests.EF61</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -74,11 +73,10 @@
   <ItemGroup>
     <EntityDeploy Include="..\QueryableValues.EF6.SqlServer.Tests.EF60\DatabaseFirst\TestModels.edmx">
       <Link>DatabaseFirst\%(FileName)%(Extension)</Link>
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>TestModels.Designer.cs</LastGenOutput>
     </EntityDeploy>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <Import Project="..\SharedTestProjectProperties.xml" />
 </Project>
