--- a/tests/QueryableValues.EF6.SqlServer.Tests.EF64.DotNetCore/QueryableValues.EF6.SqlServer.Tests.EF64.DotNetCore.csproj
+++ b/tests/QueryableValues.EF6.SqlServer.Tests.EF64.DotNetCore/QueryableValues.EF6.SqlServer.Tests.EF64.DotNetCore.csproj
@@ -3,9 +3,8 @@
 	<Import Project="..\SharedTestProjectProperties.xml" />
 
 	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
+		<TargetFrameworks>net5.0;net6.0</TargetFrameworks>
 		<RootNamespace>BlazarTech.QueryableValues</RootNamespace>
-		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<IsPackable>false</IsPackable>
 	</PropertyGroup>
