--- a/tests/QueryableValues.EF6.SqlServer.Tests.EF60/App.Config
+++ b/tests/QueryableValues.EF6.SqlServer.Tests.EF60/App.Config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="TestDbContext" connectionString="metadata=res://*/DatabaseFirst.TestModels.csdl|res://*/DatabaseFirst.TestModels.ssdl|res://*/DatabaseFirst.TestModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=Test;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="TestDbContext" connectionString="metadata=res://*/DatabaseFirst.TestModels.csdl|res://*/DatabaseFirst.TestModels.ssdl|res://*/DatabaseFirst.TestModels.msl;provider=System.Data.SqlClient;provider connection string=&quot;Server=(localdb)\MSSQLLocalDB;Integrated Security=true;Connection Timeout=190;Database=QueryableValues.EF6.Tests;AttachDbFileName=C:\Users\yv989\AppData\Local\Temp\QueryableValues.EF6.Tests.mdf&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
