--- a/tests/QueryableValues.EF6.SqlServer.Tests.EF60/QueryableValues.EF6.SqlServer.Tests.EF60.csproj
+++ b/tests/QueryableValues.EF6.SqlServer.Tests.EF60/QueryableValues.EF6.SqlServer.Tests.EF60.csproj
@@ -72,6 +72,7 @@
     <Compile Include="DbUtil.cs" />
     <Compile Include="InfrastructureTests.cs" />
     <Compile Include="ITestDbContext.cs" />
+    <Compile Include="ContainsQueryTests.cs" />
     <Compile Include="JoinQueryTests.cs" />
     <Compile Include="SequenceQueryTests.cs" />
     <Compile Include="InvalidDbContext.cs" />
