--- a/tests/QueryableValues.EF6.SqlServer.Tests.EF64/QueryableValues.EF6.SqlServer.Tests.EF64.csproj
+++ b/tests/QueryableValues.EF6.SqlServer.Tests.EF64/QueryableValues.EF6.SqlServer.Tests.EF64.csproj
@@ -20,6 +20,7 @@
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
     <LangVersion>8</LangVersion>
+	<RuntimeIdentifiers>win</RuntimeIdentifiers>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
