--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -66,7 +66,7 @@ jobs:
         uses: microsoft/vstest-action@v1.0.0
         with:
           testAssembly: BlazarTech.QueryableValues.EF6.SqlServer.Tests.EF*.dll
-          searchFolder: ./tests/
+          searchFolder: ./tests/QueryableValues.EF6.SqlServer.Tests.EF*/bin/Release/**/
           runInParallel: false
 
       - name: Upload Artifacts
