--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -68,6 +68,8 @@ jobs:
           testAssembly: BlazarTech.QueryableValues.EF6.SqlServer.Tests.EF*.dll
           searchFolder: ./tests/QueryableValues.EF6.SqlServer.Tests.EF*/bin/Release/**/
           runInParallel: false
+          vstestLocationMethod: location
+          vstestLocation: 'C:/Program Files/Microsoft Visual Studio/2022/Enterprise/Common7/IDE/Extensions/TestPlatform/vstest.console.exe'
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v2
