--- a/src/QueryableValues.EF6.SqlServer/QueryableValues.EF6.SqlServer.csproj
+++ b/src/QueryableValues.EF6.SqlServer/QueryableValues.EF6.SqlServer.csproj
@@ -20,11 +20,8 @@
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
-	<PropertyGroup Condition="'$(TargetFramework)'=='net452' or '$(TargetFramework)'=='net472'">
-		<LangVersion>8</LangVersion>
-	</PropertyGroup>
-
-	<PropertyGroup Condition="'$(TargetFramework)'=='netstandard2.1'">
+	<PropertyGroup Condition="'$(TargetFramework)'=='net452' or '$(TargetFramework)'=='net472' or '$(TargetFramework)'=='netstandard2.1'">
+		<LangVersion>9</LangVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
