--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -43,8 +43,6 @@ jobs:
 
       - name: Setup MSBuild
         uses: microsoft/setup-msbuild@v1.1
-      #- name: Setup VSTest
-      #  uses: darenm/Setup-VSTest@v1
 
       - name: Restore
         run: dotnet restore BlazarTech.QueryableValues.EF6.sln
@@ -59,17 +57,12 @@ jobs:
 
       # Tests
       - name: Build
+        if: github.event_name == 'pull_request'
         run: msbuild BlazarTech.QueryableValues.EF6.sln -property:Configuration=Release -property:RestorePackages=false
       - name: Tests
+        if: github.event_name == 'pull_request'
         run: |
           & "C:/Program Files/Microsoft Visual Studio/2022/Enterprise/Common7/IDE/Extensions/TestPlatform/vstest.console.exe" ./tests/QueryableValues.EF6.SqlServer.Tests.EF*/bin/Release/**/BlazarTech.QueryableValues.EF6.SqlServer.Tests.EF*.dll
-        #uses: microsoft/vstest-action@v1.0.0
-        #with:
-        #  testAssembly: BlazarTech.QueryableValues.EF6.SqlServer.Tests.EF*.dll
-        #  searchFolder: ./tests/QueryableValues.EF6.SqlServer.Tests.EF*/bin/Release/**/
-        #  runInParallel: false
-        #  vstestLocationMethod: location
-        #  vstestLocation: 'C:/Program Files/Microsoft Visual Studio/2022/Enterprise/Common7/IDE/Extensions/TestPlatform/vstest.console.exe'
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v2
@@ -78,7 +71,7 @@ jobs:
           path: ./src/QueryableValues.EF6.SqlServer/bin/Release/*.nupkg
   prerelease:
     needs: build
-    if: github.ref == 'refs/heads/develop'
+    if: github.event_name != 'release'
     runs-on: windows-latest
     steps:
       - name: Download Artifact
