tests: don't target net5.0 (eol)

--- a/tests/QueryableValues.EF6.SqlServer.Tests.EF64.DotNetCore/QueryableValues.EF6.SqlServer.Tests.EF64.DotNetCore.csproj
+++ b/tests/QueryableValues.EF6.SqlServer.Tests.EF64.DotNetCore/QueryableValues.EF6.SqlServer.Tests.EF64.DotNetCore.csproj
@@ -3,7 +3,7 @@
 	<Import Project="..\SharedTestProjectProperties.xml" />
 
 	<PropertyGroup>
-		<TargetFrameworks>net5.0;net6.0</TargetFrameworks>
+		<TargetFrameworks>net6.0</TargetFrameworks>
 		<RootNamespace>BlazarTech.QueryableValues.EF6.SqlServer.Tests</RootNamespace>
 		<AssemblyName>BlazarTech.QueryableValues.EF6.SqlServer.Tests.EF64</AssemblyName>
 		<Nullable>enable</Nullable>
